Translate "Privacy policy" to "Rekisteriseloste".

--- a/parts/user-registration/po/fi/puavo-user-registration.po
+++ b/parts/user-registration/po/fi/puavo-user-registration.po
@@ -37,6 +37,9 @@ msgstr "Virhe"
 msgid "Go to desktop?"
 msgstr "Siirry työpöydälle?"
 
+msgid "Privacy policy"
+msgstr "Rekisteriseloste"
+
 #: puavo-user-registration:295
 msgid ""
 "Are you sure you do not want to create a user account?  Without a user "
