WIP on "login with existing account" in user registration.

--- a/parts/user-registration/po/fi/puavo-user-registration.po
+++ b/parts/user-registration/po/fi/puavo-user-registration.po
@@ -383,6 +383,12 @@ msgstr "Siirry työpöydälle"
 msgid "button in the bottom corner."
 msgstr "painiketta alareunassa."
 
+msgid "If you already have an account, choose"
+msgstr "Jos sinulla on jo tunnus, valitse"
+
+msgid "Login with existing account"
+msgstr "Kirjaudu jo luodulla tunnuksella"
+
 msgid "First name:"
 msgstr "Etunimi:"
 
@@ -443,3 +449,6 @@ msgstr "Yhdistä"
 
 msgid "Next"
 msgstr "Seuraava"
+
+msgid "Login"
+msgstr "Kirjaudu"
