Make the page handling logic in login go through goto_page(), and make it usable without page index (goto_page_num() is for that).

--- a/parts/user-registration/po/fi/puavo-user-registration.po
+++ b/parts/user-registration/po/fi/puavo-user-registration.po
@@ -429,9 +429,6 @@ msgstr "Edellinen"
 msgid "Create your account!"
 msgstr "Luo tunnus!"
 
-msgid "HELLO WORLD"
-msgstr "HEIPPA MAAILMA"
-
 msgid "Finish and reboot"
 msgstr "Lopeta ja uudelleenkäynnistä"
 
@@ -452,3 +449,6 @@ msgstr "Seuraava"
 
 msgid "Login"
 msgstr "Kirjaudu"
+
+msgid "Cancel"
+msgstr "Peru"
