Some fixes to puavo-user-registration, and make the login UI nicer.

--- a/parts/user-registration/po/fi/puavo-user-registration.po
+++ b/parts/user-registration/po/fi/puavo-user-registration.po
@@ -450,5 +450,8 @@ msgstr "Seuraava"
 msgid "Login"
 msgstr "Kirjaudu"
 
-msgid "Cancel"
-msgstr "Peru"
+msgid "Bad username and/or password"
+msgstr "Väärä käyttäjätunnus ja/tai salasana"
+
+msgid "An unexpected error occurred"
+msgstr "Tapahtui odottamaton virhe"
