In puavo-user-registration, drop reference to "OK" which is no longer in the reboot-button.

--- a/parts/user-registration/po/fi/puavo-user-registration.po
+++ b/parts/user-registration/po/fi/puavo-user-registration.po
@@ -297,8 +297,8 @@ msgid "Have a nice time with your studies!"
 msgstr "Mukavaa opiskeluaikaa!"
 
 #: page_complete.py:22
-msgid "System must be rebooted, press OK when ready!"
-msgstr "Tietokoneesi käynnistetään uudelleen.  Napsauta OK."
+msgid "System must be rebooted."
+msgstr "Tietokoneesi täytyy käynnistää uudelleen."
 
 #: page_network.py:53
 msgid "Network Setup"
