Use lower case for "reset to factory settings"-button.

--- a/parts/laptop-setup/po/fi/puavo-laptop-setup.po
+++ b/parts/laptop-setup/po/fi/puavo-laptop-setup.po
@@ -61,10 +61,10 @@ msgid "this version:"
 msgstr "tämä versio:"
 
 msgid ""
-"DESTROY ALL USER DATA AND RESET LAPTOP TO FACTORY STATE"
+"Destroy all user data and reset laptop to factory state"
 " (requires password)"
 msgstr ""
-"TUHOA KAIKKI TIEDOT JA PALAUTA TIETOKONE TEHDASTILAAN"
+"Tuhoa kaikki tiedot ja palauta tietokone tehdastilaan"
 " (vaatii salasanan)"
 
 msgid "DANGER! DANGER!"
