Fix Finnish translation of the warning message if doing a factory reset.

--- a/parts/laptop-setup/po/fi/puavo-laptop-setup.po
+++ b/parts/laptop-setup/po/fi/puavo-laptop-setup.po
@@ -74,7 +74,7 @@ msgid ""
 "THIS PROCEDURE WILL RESET THIS COMPUTER TO FACTORY STATE!"
 "  IT WILL DESTROY ALL YOUR DATA IN YOUR HOME DIRECTORY,"
 " AND MORE!  WHEN IN DOUBT, TURN OFF THE MACHINE, PANIC"
-" AND RUN AWAY!  (press OK and provide your password)"
+" AND RUN AWAY!  (press OK and provide your password"
 " if you still want to do this.)"
 msgstr ""
 "TÄMÄ TOIMENPIDE PALAUTTAA TÄMÄN TIETOKONEEN TEHDASASETUKSILLE!"
