Update OpenBoard to version 1.5.4.
This time use the upstream git-repository so we actually get
the right version.

--- a/debs/openboard/debian/changelog
+++ b/debs/openboard/debian/changelog
@@ -1,3 +1,9 @@
+openboard (1.5.4-0+puavo1) bustere; urgency=medium
+
+  * Update to 1.5.4.
+
+ -- Puavo Org <dev@opinsys.fi>  Tue, 25 Aug 2020 11:31:18 +0300
+
 openboard (1.5.3-0+puavo1) buster; urgency=medium
 
   * Update to 1.5.3.
