Allow only numbers in the telephone field

--- a/parts/user-registration/po/fi/puavo-user-registration.po
+++ b/parts/user-registration/po/fi/puavo-user-registration.po
@@ -413,8 +413,8 @@ msgstr "Kieli:"
 msgid "Phone number:"
 msgstr "Puhelinnumero:"
 
-msgid "The phone number is optional.  It is used only for technical support."
-msgstr "Puhelinnumero on valinnainen.  Sitä käytetään vain tukitilanteissa."
+msgid "The phone number is optional.  It is used only for technical support.\nPlease enter only digits (0-9)."
+msgstr "Puhelinnumero on valinnainen.  Sitä käytetään vain tukitilanteissa.\nKäytäthän vain numeroita (0-9)."
 
 msgid ""
 "You will receive a confirmation to your email."
