puavo-ers-applet fails if there are too many exams (with too many decrypt codes).  This depends on screen resolution actually. Set up an alternative way to get to passwords information in case there are too many exams.

--- a/parts/ers/po/fi/puavo-ers-applet.po
+++ b/parts/ers/po/fi/puavo-ers-applet.po
@@ -9,5 +9,11 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-msgid "click passphrase below put it into clipboard"
+msgid "Click passphrase below put it into clipboard"
 msgstr "Paina alhaalla olevaa purkukoodia saadaksesi sen leikepöydälle"
+
+msgid "Open decrypt codes window"
+msgstr "Avaa purkukoodi-ikkuna"
+
+msgid "Decrypt codes"
+msgstr "Purkukoodit"
