Add a mechanism to enable/disable exam session automation.

--- a/parts/ers/po/fi/puavo-ers-applet.po
+++ b/parts/ers/po/fi/puavo-ers-applet.po
@@ -20,3 +20,15 @@ msgstr "Purkukoodit"
 
 msgid "No current exams"
 msgstr "Ei kokeita"
+
+msgid "Exam session automation is active"
+msgstr "Koesessioiden automaatio on toiminnassa"
+
+msgid "Exam session automation is NOT active"
+msgstr "Koesessioiden automaatio EI OLE toiminnassa"
+
+msgid "Enable automation"
+msgstr "Laita automaatio päälle"
+
+msgid "Disable automation"
+msgstr "Laita automaatio pois päältä"
