Disable exam automation in case helper scripts are not installed in the virtual exam server, enable it otherwise.  Prompt user to install it in case it is missing, when trying to activate it.

--- a/parts/ers/po/fi/puavo-ers-applet.po
+++ b/parts/ers/po/fi/puavo-ers-applet.po
@@ -32,3 +32,15 @@ msgstr "Laita automaatio päälle"
 
 msgid "Disable automation"
 msgstr "Laita automaatio pois päältä"
+
+msgid "Install automation helper"
+msgstr "Asenna automaatio-apuri"
+
+msgid ""
+"No trace of exam automation helper could be found,"
+" please install it into the virtual server"
+" (execute /media/usb1/ktpapu-asennin in the virtual server)."
+msgstr ""
+"Koeautomaation apurimekanismia ei löytynyt,"
+" ole hyvä ja asenna se virtuaalipalvelimeen"
+" (suorita virtuaalipalvelimessa /media/usb1/ktpapu-asennin)."
