Fix documentation relating the "chromium" puppet-module.

--- a/rules/README
+++ b/rules/README
@@ -11,8 +11,7 @@ bigtouch
     Gnome 3 customizations for big touchscreens.
 
 chromium
-    Setup chromium to use flashplugin in chrome, and do not do the default
-    browser check.
+    Setup some chromium configurations.
 
 citrix
     Configurations for Citrix client.
