user-registration: Send the organisation domain with the request
This allows the server to decide the destination organisation for
the user's account.

At the time this commit is done, the puavo-accounts server has not
yet been upgraded to support multi-organisation registrations, so
the "invalid_organisation_domain" error handling branch has not been
tested at all.

--- a/parts/user-registration/po/fi/puavo-user-registration.po
+++ b/parts/user-registration/po/fi/puavo-user-registration.po
@@ -159,6 +159,14 @@ msgstr "Epäkelpoa tietoa"
 msgid "This registration program sent bad information to the server."
 msgstr "Tämä rekisteröintiohjelma lähetti epäkelpoa tietoa palvelimelle."
 
+#: page_account.py:449
+msgid "Invalid organisation"
+msgstr "Virheellinen organisaatio"
+
+#: page_account.py:450
+msgid "This machine has been registered to an invalid organisation."
+msgstr "Tämä laite on rekisteröity virheelliseen organisaatioon."
+
 #: page_account.py:424
 msgid "Missing information"
 msgstr "Puutteelliset tiedot"
