user-registration: Yeah, no. Letters only here.

--- a/parts/user-registration/po/fi/puavo-user-registration.po
+++ b/parts/user-registration/po/fi/puavo-user-registration.po
@@ -127,8 +127,8 @@ msgid "The login name must be at least three characters long"
 msgstr "Käyttäjätunnuksen on oltava vähintään kolme merkkiä pitkä"
 
 #: page_account.py:257
-msgid "The login name must start with a letter or a number"
-msgstr "Käyttäjätunnuksen täytyy alkaa kirjaimella tai numerolla"
+msgid "The login name must start with a letter"
+msgstr "Käyttäjätunnuksen täytyy alkaa kirjaimella"
 
 #: page_account.py:364
 msgid "Sending information to the server..."
