Add "Username" to translations in puavo-user-registration.

--- a/parts/user-registration/po/fi/puavo-user-registration.po
+++ b/parts/user-registration/po/fi/puavo-user-registration.po
@@ -446,6 +446,9 @@ msgstr "Uuden käyttäjän rekisteröinti"
 msgid "Privacy Policy"
 msgstr "Rekisteriseloste"
 
+msgid "Username:"
+msgstr "Käyttäjätunnus:"
+
 msgid "Password:"
 msgstr "Salasana:"
 
